# llm-geo

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
llm_geo/: parse.py
notebooks/: 000_exp_webscrape.ipynb  000_experiment.ipynb  001_exp_perplexica.ipynb
